--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,6 @@
 				<version>2.2.1</version>
 				<configuration>
 					<attach>true</attach>
-					<encoding>UTF-8</encoding>
 				</configuration>
 				<executions>
 					<execution>
@@ -211,7 +210,7 @@
 				<version>2.12.4</version>
 				<configuration>
 					<skipTests>true</skipTests>
-					<testFailureIgnore>flase</testFailureIgnore>
+					<testFailureIgnore>false</testFailureIgnore>
 					<forkMode>once</forkMode>
 					<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
 					<systemProperties>
