1. add 用户流水处理日志，

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -39,3 +39,10 @@ log4j.appender.dubbo.File=${catalina.base}/logs/dubbo
 log4j.appender.dubbo.layout=org.apache.log4j.PatternLayout
 log4j.appender.dubbo.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}][%p] %m%n
 log4j.additivity.dubbo = false
+#用户流水异常日志
+log4j.logger.accountCheck=info, accountCheck
+log4j.appender.accountCheck=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.accountCheck.File=${catalina.base}/logs/account.log
+log4j.appender.accountCheck.layout=org.apache.log4j.PatternLayout
+log4j.appender.accountCheck.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}][%p] %m%n
+log4j.additivity.accountCheck = false
