--- a/src/main/resources/props.prod/redis.properties
+++ b/src/main/resources/props.prod/redis.properties
@@ -7,6 +7,6 @@ redis.pool.maxWaitMillis=1000
 #\u5f53\u8c03\u7528borrow Object\u65b9\u6cd5\u65f6\uff0c\u662f\u5426\u8fdb\u884c\u6709\u6548\u6027\u68c0\u67e5
 redis.pool.testOnBorrow=true
 #TEST
-redis.ip=117.121.26.70
-redis.password=manager
-redis.port=6378
+redis.ip=10.0.0.194
+redis.password=TFH2016yijia
+redis.port=6379
