--- a/src/main/resources/props.prod/jdbc.properties
+++ b/src/main/resources/props.prod/jdbc.properties
@@ -11,8 +11,8 @@ aliLibrary.db.statementsCacheSize=0
 aliLibrary.db.releaseHelperThreads=4
 
 jdbc.url=jdbc\:mysql\://10.0.0.161\:3306/yijiapai_platform?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull
-jdbc.username=taifenghui2016yj
-jdbc.password=yjproot@)!^taifenghui
+jdbc.username=yjp_online
+jdbc.password=taifenghui@)!^
 
 
 
