--- a/src/main/resources/props.prod/redis.properties
+++ b/src/main/resources/props.prod/redis.properties
@@ -8,6 +8,6 @@ redis.pool.maxWaitMillis=1000
 redis.pool.testOnBorrow=true
 #TEST
 redis.ip=10.0.0.194
-redis.password=TFH2016yijia
+redis.password=crs-lodfe5ga:TFH2016yijia
 redis.port=6379
 redis.timeout=3600
