--- a/src/main/resources/props.dev/jdbc.properties
+++ b/src/main/resources/props.dev/jdbc.properties
@@ -10,7 +10,7 @@ aliLibrary.db.acquireIncrement=2
 aliLibrary.db.statementsCacheSize=0
 aliLibrary.db.releaseHelperThreads=4
 
-jdbc.url=jdbc\:mysql\://192.168.1.239\:3306/yijiapai_platform?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull
+jdbc.url=jdbc\:mysql\://192.168.1.239\:3306/yijiapai_platform?useUnicode\=true&zeroDateTimeBehavior\=convertToNull
 jdbc.username=liuyangtest
 jdbc.password=liuyangtest
 
