--- a/src/main/resources/props.prod/jdbc.properties
+++ b/src/main/resources/props.prod/jdbc.properties
@@ -10,7 +10,7 @@ aliLibrary.db.acquireIncrement=2
 aliLibrary.db.statementsCacheSize=0
 aliLibrary.db.releaseHelperThreads=4
 
-jdbc.url=jdbc\:mysql\://10.0.0.161\:3306/yijiapai_platform?useUnicode\=true&characterEncoding\=utf8&zeroDateTimeBehavior\=convertToNull
+jdbc.url=jdbc\:mysql\://10.0.0.161\:3306/yijiapai_platform?useUnicode\=true&zeroDateTimeBehavior\=convertToNull
 jdbc.username=yjp_online
 jdbc.password=taifenghui@)!^
 
