--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,12 @@
         <dependency>
             <groupId>com.yijiawang</groupId>
             <artifactId>userCenter-rpc</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yijiawang</groupId>
+            <artifactId>productCenter-rpc</artifactId>
+            <version>2.7.3</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
