1.fix log level

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,44 +1,30 @@
 # Set root logger level to Debug and its only appender to A1
-log4j.rootLogger=info, A1,UID
+log4j.rootLogger=error, A1
 log4j.category.org.springframework = info
 
 # A1 is set to be ConsoleAppender
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
-
-# A1 uses PatternLayout
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%t] - %m%n
 
-# A2 is set to be logfile
-log4j.appender.A2=org.apache.log4j.RollingFileAppender
-# Define the file name
-log4j.appender.A2.File=ts.log
-# Define the layout
-log4j.appender.A2.layout=org.apache.log4j.PatternLayout
-log4j.appender.A2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%t] %x - %m%n
-
+#业务日志
+log4j.logger.com.yijiawang=debug,UID
+log4j.additivity.com.yijiawang=false
 log4j.appender.UID=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.UID.Threshold=info
 log4j.appender.UID.File=${catalina.base}/logs/uid.log
 log4j.appender.UID.layout=org.apache.log4j.PatternLayout
 log4j.appender.UID.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%t] %x - %m%n
 
-
-#unify log
-log4j.logger.sysunifylog=info, sysunifylog
-log4j.appender.sysunifylog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.sysunifylog.DatePattern='.'yyyy-MM-dd-HH'.log'
-log4j.appender.sysunifylog.File=${catalina.base}/logs/sysunifylog
-log4j.appender.sysunifylog.layout=org.apache.log4j.PatternLayout
-log4j.appender.sysunifylog.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}][%p] %m%n
-log4j.additivity.sysunifylog = false
 #dubbo log
 log4j.logger.dubbo=error
+log4j.additivity.dubbo = false
 log4j.appender.dubbo=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dubbo.DatePattern='.'yyyy-MM-dd-HH'.log'
 log4j.appender.dubbo.File=${catalina.base}/logs/dubbo
 log4j.appender.dubbo.layout=org.apache.log4j.PatternLayout
 log4j.appender.dubbo.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}][%p] %m%n
-log4j.additivity.dubbo = false
+
 #用户流水异常日志
 log4j.logger.accountCheck=info, account
 log4j.additivity.accountCheck=false
